# permission-graph

./: .gitignore  404.html  LICENSE  README.md  gen_ref_pages.py  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: .github-ci.yml
docs/: gen_ref_pages.py  index.md
permission_graph/: __init__.py  permission_graph.py  structs.py
permission_graph/backends/: base.py  igraph.py
reference/SUMMARY/: index.html
reference/permission_graph/: index.html
reference/permission_graph/backends/: index.html
reference/permission_graph/backends/base/: index.html
reference/permission_graph/backends/igraph/: index.html
reference/permission_graph/permission_graph/: index.html
reference/permission_graph/structs/: index.html
search/: search_index.json
src/permission_graph/: __init__.py  permission_graph.py  structs.py
src/permission_graph/backends/: base.py  igraph.py  postgres.py
tests/: __init__.py  conftest.py  test_backends.py  test_doc_examples.py  test_igraph.py  test_permission_graph.py  test_system.py
