
[project]
name = "permission-graph"
version = "0.1.0"
description = "A graph based authorization library"
authors = [
    {name = "Grayden Shand", email = "graydenshand@gmail.com"},
]
dependencies = [
    "igraph>=0.10.8",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "isort>=5.12.0",
]

[tool.pdm.scripts]
format.shell = "black . && isort ."

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration",
]
