
[project]
name = "permission-graph"
dynamic = ["version"]
description = "A graph based authorization library"
authors = [
    {name = "Grayden Shand", email = "graydenshand@gmail.com"},
]
dependencies = [
    "igraph>=0.10.8",
    "pydantic>=2.4.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}

[project.urls]
Respository = "https://github.com/graydenshand/permission-graph/"
Documentation = "https://graydenshand.github.io/permission-graph/"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "integration",
    "unit",
    "system",
    "docs",
]

[tool.pdm]
[tool.pdm.version]
source = "scm"

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=7.4.2",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.4.5",
    "twine>=4.0.2",
    "mkdocs-gen-files>=0.5.0",
    "mkdocstrings[python]>=0.23.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-section-index>=0.3.8",
    "coverage[pytest]>=7.3.2",
]

[tool.pdm.scripts]
format.shell = "black . && isort ."
publish.shell = "pdm build && python -m twine upload dist/*"
test.shell = "coverage run --source=src -m pytest"

[tool.isort]
profile = "black"
